# django-otp-actions

./: .coverage  .gitignore  LICENSE  README.md  db.sqlite3  diff.txt  pyproject.toml
django_otp_actions/: RFC.md  decorators.py  exceptions.py  pyproject.toml  services.py
django_otp_actions/tests/: test_decorators.py  test_service.py
otp/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/django_otp_actions/: apps.py  decorators.py  exceptions.py  services.py
src/django_otp_actions/tests/: test_service.py
src/otp_actions/: apps.py  decorators.py  exceptions.py  mixins.py  services.py
src/otp_actions/tests/: test_service.py
